--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     </script>
 </head>
-<body onload="GetMap();" style="width:100%; height:100%;">
-<div id='myMap' style="position:relative; width:100%; height:100%;"></div>
+<body onload="GetMap();">
+<div id='myMap' style="position:absolute; left: 0; top: 0; width:100%; height:100%;"></div>
 </body>
 </html>
